Fix T43151: Collada meshes crash Blender

We have multiple reports of collada files crashing, run all meshes through validate.