source/blender/collada/MeshImporter.cpp
@@ -1195,7 +1195,12 @@ bool MeshImporter::write_geometry(const COLLADAFW::Geometry *geom)
 	
 	read_vertices(mesh, me);
 	read_polys(mesh, me);
-	BKE_mesh_calc_edges(me, false, false);
+
+	// must validate before calculating edges
+	BKE_mesh_calc_normals(me);
+	BKE_mesh_validate(me, false, false);
+	// validation does this
+	// BKE_mesh_calc_edges(me, false, false);
 
 	// read_lines() must be called after the face edges have been generated.
 	// Oterwise the loose edges will be silently deleted again.
